feat(common): upload picture
