# src/config/swagger.json
@@ -620,6 +620,20 @@
         }
       }
     },
+    "/util/local_picture": {
+      "post": {
+        "summary": "测试post请求",
+        "description": "测试post请求",
+        "tags": [
+          "工具路由"
+        ],
+        "responses": {
+          "200": {
+            "description": "这是一个工具路由,post请求正常!"
+          }
+        }
+      }
+    },
     "/devicemodel": {
       "post": {
         "summary": "添加物模型",
@@ -2178,6 +2192,11 @@
       "name": "用户模块",
       "description": "用户管理模块",
       "baseurl": "/v1/account"
+    },
+    {
+      "name": "工具路由",
+      "description": "工具路由",
+      "baseurl": "/v1/util"
     },
     {
       "name": "物模型管理",
